<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_diet">

    <fragment
        android:id="@+id/navigation_diet"
        android:name="com.example.sajiindong.ui.home.HomeFragment"
        android:label="@string/title_diet"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bulking"
        android:name="com.example.sajiindong.ui.dashboard.DashboardFragment"
        android:label="@string/title_bulking"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sajiindong.ui.notifications.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>