<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detailbg"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailDiet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/food_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="18dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#97B3A2"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/image_food"
                    android:src="@android:color/darker_gray"
                    app:srcCompat="@drawable/pixel2" />

                <TextView
                    android:id="@+id/tv_title_diet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_toEndOf="@+id/img_item_photo"
                    android:text="@string/food_classification"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_item_diet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_diet"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/img_item_photo"
                    android:textColor="@color/black"
                    tools:text="@string/classify_content" />

                <Button
                    android:id="@+id/btn_set_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_item_diet"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/btn_set_favorite"
                    android:layout_toEndOf="@id/img_item_photo"
                    android:backgroundTint="#2B2626"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:ignore="VisualLintButtonSize,TextContrastCheck" />

                <Button
                    android:id="@+id/btn_set_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_item_diet"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/colorPrimaryVariant"
                    android:text="@string/favorite"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#97B3A2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="5dp"
                    android:text="@string/food_description"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:justificationMode="inter_word"
                    android:text="@string/food_description_content"
                    android:textColor="@color/black"
                    tools:targetApi="o" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>